package core.Category.domain.ValueObjects;

public class CategoryName {
}
