package core.Category.domain.ValueObjects;

public enum CategoryStatus {
}
