@startuml

package "Category " <<aggregate>>{

    class Category <<Entity>> <<root>>{
    }

    class CategoryName <<Value Object>>{
    }

    class CategoryDescription <<Value Object>>{
    }

    enum CategoryStatus <<Value Object>>{
    }

    'Category -> x
    Category --> "1" CategoryName: name
    Category --> "1" CategoryDescription: description
    Category --> "1" CategoryStatus: categoryStatus

@enduml